--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+/* initializing*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+/* create the general layout */
 .container {
   display: grid;
   grid-template-rows: repeat(4, 1fr);
@@ -12,4 +14,23 @@
 .container div {
   border: 2px solid blue;
   text-align: center;
+  padding: 50px;
+}
+/* specific the grid layout*/
+.two {
+  grid-column: span 2;
+  background-color: blueviolet;
+}
+.six {
+  grid-column: span 2;
+  background-color: greenyellow;
+}
+.nine {
+  grid-column: 2;
+  grid-row: 3 / span 2;
+  background-color: orange;
+}
+.ten {
+  grid-row: span 2;
+  background-color: crimson;
 }
